# Finance-Dashbaord-api

./: .gitignore  Pipfile  Procfile  README.MD  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: main_finance-dashboard-api.yml
configurations/: config-logger.json
docs_assets/: conf.py
finance_dashboard_api/: __init__.py  app.py  app_gunicorn.py  const.py
finance_dashboard_api/api/: routes.py
finance_dashboard_api/api/model/: routes_transazioni_uscite.py  routes_utente.py
finance_dashboard_api/api/validators/: transazione_validator.py
finance_dashboard_api/controller/: __init__.py  routes.py
finance_dashboard_api/errors/: __init__.py  error_register.py
finance_dashboard_api/logging_module/: __init__.py  logger_initalizer.py
finance_dashboard_api/model/: conto.py  transazioni_uscite.py  utente.py
finance_dashboard_api/model/dto/: dto_conto.py  dto_transazioni_uscite.py  dto_utente.py
finance_dashboard_api/services/: __init__.py  configuration_service.py  database_service.py
finance_dashboard_api/services/api/: api_transazioni_uscite_service.py  api_utenti_service.py
finance_dashboard_api/services/dao/: dao_conto_service.py  dao_transazioni_uscite_service.py  dao_utente_service.py
tests/: __init__.py  test_endpoint.py
