# CONFIGURATIONE PER INSTALLARE IL PROGETTO COME PACKAGE

[build-system]
requires = ["setuptools>=68", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "finance_dashboard_api"
requires-python = ">=3.9"
dynamic = ["version"]
dependencies = [
    # Add runtime dependencies here
]

# Enables the usage of setuptools_scm (DECOMMENTARE IN UNA REPO GIT) 
# [tool.setuptools_scm]


# DIPENDENZE DA AGGIUNGERE PER OGNI PASSO DELLA PIPELINE
[project.optional-dependencies]
lint = ["mypy", "ruff"]
test = ["pytest==7.4.1"]
doc = ["sphinx", "sphinx_rtd_theme"]
build = []
# MODO PER POTER ESEGUIRE SOLAMENTE UN PEZZO DELLA PIPELINE
dev = [
    "tox",
    "finance_dashboard_api[lint]",
    "finance_dashboard_api[test]",
    "finance_dashboard_api[doc]",
    "finance_dashboard_api[build]",
]


# CONFIGURAZIONE DEI TOOL DI LINTING
[tool.ruff]
line-length = 120
src = ["finance_dashboard_api"]
extend-exclude = ["conf.py"]
target-version = "py312"
lint.select = ["ALL"]
lint.ignore = [
    "COM812", # Conflicts with the formatter
    "ISC001", # Conflicts with the formatter
    "ANN101", # "missing-type-self"
    "PT001",  # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT004",  # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT005",  # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
    "PT023",  # https://github.com/astral-sh/ruff/issues/8796#issuecomment-1825907715
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101", # Use of `assert` detected
    "D103", # Missing docstring in public function
]
"**/__init__.py" = [
    "F401", # Imported but unused
    "F403", # Wildcard imports
]
"docs/**" = [
    "INP001", # Requires __init__.py but docs folder is not a package.
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`(https://github.com/astral-sh/ruff/issues/5434)
keep-runtime-typing = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
disallow_untyped_defs = true # Functions need to be annotated
warn_unused_ignores = true
exclude = [
    "finance_dashboard_api-\\d+", # Ignore temporary folder created by setuptools when building an sdist
    "venv.*/",
    "build/",
    "dist/",
    "docs/",
    "configuration/",
    "logs/",
    "docs_assets/",
]


# CONFIGURAZIONE DEI TOOL DI TEST

[tool.pytest.ini_options]
addopts = """
    --import-mode=append
    """

[tool.setuptools]
py-modules = ["finance_dashboard_api"]
